# Robomuse-4

./: README.md  automap.sh  map.sh  nav.sh  robotstart.sh
src/robomuse-ros-master/robomuse_drivers/: CMakeLists.txt  dockstopcoordinate  hi.csv  maps.yaml  marker.csv  package.xml  patrol1.pgm  patrol1.yaml  try1.csv
src/robomuse-ros-master/robomuse_drivers/config/: ds4.yaml  find_object.ini  goal_config.rviz  mapping.rviz  robomuse.yaml
src/robomuse-ros-master/robomuse_drivers/launch/: actual_iit_central_robomuse_nav_test.launch  bringup.launch  create.launch  display.launch  dock.sh  experiment.launch  exploration_move_base.launch  exploration_rtab.launch  explore.launch  expt.launch  find_object_3d.launch  gmap.launch  iit_central_robomuse_nav_test.launch  map_move_base.launch  map_rtab.launch  markerloc.launch  nav_move_base.launch  nav_rtab.launch  navigator.launch  patrol.launch  robomuse_amcl.launch  robomuse_depth_reg.launch  robomuse_nav2d_op.launch  surveil.launch  surveillance.launch  tracker.launch  waypoint.launch
src/robomuse-ros-master/robomuse_drivers/maps/: LHC_Circle.pgm  LHC_Circle.yaml  LHC_Circle_Edit.pgm  LHC_Corner.pgm  LHC_Corner.yaml  LHC_Corner_Automap.pgm  LHC_Corner_Automap.yaml  LHC_Surveillance.pgm  LHC_Surveillance.yaml  LHC_Surveillance_Complete.pgm  LHC_Surveillance_Complete.yaml  LHC_Surveillance_Full.pgm  LHC_Surveillance_Full.yaml  LHC_Surveillance_Right.pgm  LHC_Surveillance_Right.yaml  LHC_Test.pgm  LHC_Test.yaml  Robomuse_Explore.pgm  Robomuse_Explore.yaml  SAC.pgm  SAC.yaml  SAC_Map.pgm  SAC_Map.yaml  around.pgm  around.yaml  around2.pgm  around2.yaml  asd.pgm  asd.yaml  demomap15th.pgm  demomap15th.yaml  demomapnew.pgm  demomapnew.yaml  demomaptry2.pgm  demomaptry2.yaml  dockmap.pgm  dockmap.yaml  final.jpg~  final.pgm  final.yaml  (+39 more)
src/robomuse-ros-master/robomuse_drivers/param/: amclold.yaml  base_local_exploration.yaml  base_local_planner.yaml  costmap.yaml  costmap_common.yaml  dwaplanner.yaml  exploration.yaml  global_costmap.yaml  gmapping.yaml  local_costmap.yaml  local_costmap_exploration.yaml  nav_test_params.yaml  operator.yaml  recovery.yaml  robomuse.rviz  robomuse_nav.rviz  ros.yaml
src/robomuse-ros-master/robomuse_drivers/scripts/: LHC_Surveillance_Right.py  MenuFinal.py  alternatetestrtog.py  around.py  aroundlhc.py  arucrtogconv.py  auto_map.py  bridge.py  choose_corrected_pose.py  clearcostmap.sh  (+53 more)
(+242 files in other folders)
